infra/jenkins-cluster/jenkins.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      name: jenkins-master
      labels:
        app: jenkins-master
    spec:
      containers:
      - name: jenkins
        image: gcr.io/meta-iterator-105109/jenkins
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-home
          mountPath: "/var/jenkins_home"
        - name: docker-sock
          mountPath: "/var/run/docker.sock"
        # - name: dockerhub-login-secret
        #   mountPath: "/var/secrets/dockerhub-login"
        livenessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 15
        resources:
          requests:
            memory: "4Gi"
        securityContext:
          privileged: true
      volumes:
      - name: jenkins-home
        gcePersistentDisk:
          pdName: oss-cluster-jenkins-work
          fsType: ext4
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      # - name: dockerhub-login-secret
      #   secret:
      #     secretName: dockerhub-login
