infra/jenkins-cluster/service-jenkins-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-http
spec:
  type: LoadBalancer
  selector:
    app: jenkins-master
  ports:
  - port: 80
    targetPort: 8080
