infra/jenkins-cluster/service-jenkins-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  labels:
    app: jenkins-master
spec:
  type: NodePort
  selector:
    app: jenkins-master
  ports:
  - port: 50000
    targetPort: 50000
    nodePort: 31001
    protocol: TCP
